input type updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="js-start-btn start-btn">!!Start!!</button>
         <p class="js-instruction instruction"></p>
         <input
-          type="text"
+          type="number"
           class="player-input js-player-input visible-input-box"
           placeholder="??"
         />
